# VDSProject_Group6

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  install_debs.sh
.github/workflows/: CI.yml
src/: CMakeLists.txt  Manager.cpp  Manager.h  ManagerInterface.h  config.h  main.cpp
src/bench/: CMakeLists.txt  CircuitToBDD.cpp  main_bench.cpp  skip_parser.hpp
src/test/: CMakeLists.txt  Tests.h
